--- a/frontend_templates/info/home.html
+++ b/frontend_templates/info/home.html
@@ -53,7 +53,7 @@
           </div>
           <div class="col-lg-4 mb-4">
             <div class="offer-section-item">
-              <h3 class="about-section-header">Library Security</h3>
+              <h3 class="about-section-header">Code Base Security</h3>
               <p class="about-section-text">We will make sure your code that supports the user submission is kept safe and away from any prying eyes.</p>
              </div>
           </div>
