--- a/frontend_templates/interview_q/all.html
+++ b/frontend_templates/interview_q/all.html
@@ -32,7 +32,7 @@
                     </div>
                     
                     <div class="create-section">
-                        <h2 class="create-section-title">Create a new interview question: </h2><br />
+                        <h2 class="create-section-title">Create a New Interview Question: </h2><br />
                         {% if can_user_make_questions %}
                             <a href="/interview_questions/create" class="btn btn-lg btn-outline-primary  create-section-button">Create</a>
                         {% else %}
