--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -11,6 +11,13 @@
                 <div class="py-5 text-center">
                     <img class="d-block mx-auto mb-4" src="{% static 'images/icon.png' %}" alt="" width="72" height="72">
                     <h2 class="page-title">Create Interview Question</h2>
+                    <p class="page-description">
+                        <b>How it works:</b><br /> During the process of creating a question, you will upload various files. When a user submits their code,
+                        the user's code, your support (code base) files and test files will all be moved in the same directory and the test files
+                        will be ran. You should keep this in mind when writing your code. 
+                        The user will be brought to the results screen with a display of the visible tests they passed. After the user submits, you
+                        will be able to see the user's test results and code submission.
+                    </p>
                 </div>
         </div>
             <form method="post" enctype="multipart/form-data">
