--- a/frontend_templates/interview_q/send.html
+++ b/frontend_templates/interview_q/send.html
@@ -39,7 +39,7 @@
       </div>
       <div id="how_many_minutes_div">
        <label for="how_many_minutes">How Many Minutes Does the User Have?</label>
-       <input class="form-control" type="number" name="how_many_minutes" id="how_many_minutes"><br />
+       <input class="form-control" type="number" name="how_many_minutes" id="how_many_minutes" min="1"><br />
       </div>
 
       <br>
