--- a/frontend_templates/registration/enroll.html
+++ b/frontend_templates/registration/enroll.html
@@ -12,6 +12,9 @@
       {% csrf_token %}
       <img class="d-block mx-auto mb-4" src="{% static 'images/icon.png' %}" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">BECOME A CREATOR</h1>
+      {% if message %}
+        <p style="color: red">{{ message }}</p>
+      {% endif %}
       <h3>Option 1: Payment:</h3>
       <h3>Option 2: Coupon/Promo Code:</h3>
       <input type="text" id="coupon_code" name="coupon_code" class="form-control" placeholder="Coupon Code"><br />
