--- a/frontend_templates/interview_q_instance/answer.html
+++ b/frontend_templates/interview_q_instance/answer.html
@@ -59,8 +59,23 @@
             <button type="button" class="btn btn-secondary toggle-button" id="toggle_sidebar"> < </button>
             <div class="editor_options-right">
               <p class="file-name">File: </p><select class="select-css" id="file-drop-down-two">
-                  {% for filename in files_to_work_on_names %}
-                    <option value="{{ filename }}">{{ filename }}</option>
+                  {% for opt_group in opt_groups %} 
+                    <optgroup label="{{ opt_group }}">
+                      {% if opt_group == 'Question' %}
+                        <option value="Question Description">Question Description</option>
+                      {% elif opt_group == 'Stub Files' %}
+                        {% for filename in files_to_work_on_names %}
+                          <option value="{{ filename }}">{{ filename }}</option>
+                        {% endfor %}
+                      {% elif opt_group == 'API' %}
+                        <option value="API Description">API Description</option>
+                        <option value="API Methods">API Methods</option>
+                      {% elif opt_group == 'Example Code' %}
+                        {% for filename in example_files_names %}
+                          <option value="{{ filename }}">{{ filename }}</option>
+                        {% endfor %}
+                      {% endif %}
+                    </optgroup>
                   {% endfor %}
               </select>
               <p class="theme-name">Theme: </p><select id="theme-two" class="select-css" onchange="onSelectNewThemeTwo()"> </select>
@@ -406,8 +421,44 @@
 
 
   $('#file-drop-down-two').change(function() {
-    currently_selected_file_two = $("#file-drop-down-two option:selected").text();
-    code_editor_two.setValue(name_to_body[currently_selected_file_two].toString(), -1);
+    var selected = $(':selected', this);
+    var opt_group = selected.parent().attr('label');
+    if (opt_group === "Question") {
+      if (code_editor_two !== null) {
+        code_editor_two.destroy();
+      }
+      $("#editor_two").html(name_to_body["Question Description"]);
+    } else if (opt_group === "Stub Files") {
+      if (code_editor_two !== null) {
+        code_editor_two.destroy();
+      }
+      $("#editor_two").html('')
+      code_editor_two = textarea_edit("editor_two");
+      setUpOnChangeForEditorTwo();
+      code_editor_two.setReadOnly(false);
+      currently_selected_file_two = $("#file-drop-down-two option:selected").text();
+      code_editor_two.setValue(name_to_body[currently_selected_file_two].toString(), -1);
+    } else if (opt_group === "API") {
+      if (selected.val() === "API Description") {
+        if (code_editor_two !== null) {
+          code_editor_two.destroy();
+        }
+        $("#editor_two").html(name_to_body["API Description"]);
+      } else if (selected.val() === "API Methods") {
+        if (code_editor_two !== null) {
+          code_editor_two.destroy();
+        }
+        $("#editor_two").html(name_to_body["API Methods"]);
+      }
+    } else if (opt_group === "Example Code") {
+      if (code_editor_two !== null) {
+        code_editor_two.destroy();
+      }
+      $("#editor_two").html('')
+      code_editor_two = textarea_edit_example_code("editor_two");
+      code_editor_two.setValue(example_name_to_body[selected.val()], -1);
+      code_editor_two.setReadOnly(true);
+    }
   });
 
 
@@ -495,6 +546,9 @@
       }
     code_editor_one.destroy();
     $("#editor_one").html(name_to_body["Question Description"]);
+
+    code_editor_two.destroy();
+    $("#editor_two").html(name_to_body["Question Description"]);
   }
 
   function startTimer(duration, display) {
