--- a/frontend_templates/interview_q/delete.html
+++ b/frontend_templates/interview_q/delete.html
@@ -11,8 +11,8 @@
              {% if user.is_authenticated %}
                  <form method="post">
                         {% csrf_token %}
-                        <div style="color: white; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
-                        <h1>Are you sure you want to delete: {{ question.name }} </h1><br />
+                        <div style="color: #7373fd; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+                        <h1>Are you sure you want to delete: {{ question.name }} ?</h1><br />
                         <center><button class="btn btn-danger btn-lg">Yes, Delete</button></center>
                     </div>
                 </form>
