make language less agressive

--- a/frontend_templates/info/about.html
+++ b/frontend_templates/info/about.html
@@ -20,7 +20,7 @@
             <h2 class="section-header">About Us</h2>
             <p class="section-body">Encompass Interviews is an online platform leading the charge to change the way technical programming interview questions are done. We believe that the current way that programming interviews are done, primarily through algorithm based interviews, do not stress skills that are important in an actually programming job. This leads to low signal for the company and high stress for the applicant.
                We attempt to change this by offering different types of questions on our platform that stress skills such as reading existing code, using APIs, and solving implementation challenges.
-               We are taking the first step to allowing people’s dreams to become true.
+               We are taking the first step to removing an obstacle that stops developers from getting their dream job.
             </p>
           </div>
           <div class="col-md-4">
