--- a/frontend_templates/info/home.html
+++ b/frontend_templates/info/home.html
@@ -26,18 +26,18 @@
         {% endif %}
       </div>
     </div>
-    <div class="row" style="margin-bottom: 3vh">
+    <div class="row appeal-section" style="margin-bottom: 3vh">
       <div class="col-lg-6 mb-6 left-section">
         <div class="about-section">
           <h3 class="about-section-header">Candidates,<br><br> Do Interviews That Matter</h3>
-          <p class="about-section-text">Stop wasting your time doing algorithm interviews. You have spent your career creating impressive personal projects, tackling difficult challenges, and having invaluable industry experience. Your next programming opportunity will allow you to grow and develop even more. There’s only one problem that is stopping you from this dream job. Your college algorithms class. Do problems that you will encounter in the real world.</p>
+          <p class="about-section-text">You have spent your career creating impressive personal projects, tackling difficult challenges, and having invaluable industry experience. Your next programming opportunity will allow you to grow and develop even more. There’s only one problem that is stopping you from this dream job. Your college algorithms class. Do problems that you will encounter in the real world.</p>
         </div>
       </div>
       <div class="col-lg-6 mb-6 right-section">
           <div class="about-section">
             <h3 class="about-section-header">Interviewers,<br><br> Offer Candidates High Signal Interview Questions</h3>
             <p class="about-section-text">Want to know how a potential candidate would perform in the job? Why not give them a challenge similar to what they would experience? 
-              Why waste time giving algorithm questions? Get the most signal now.</p>
+            Get the most signal now.</p>
           </div>
       </div>
     </div>
