--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load compress %}
 {% block css_imports %}
 <link href="{% static 'interview/creation/main.css' %}" rel="stylesheet">
 {% endblock %}
@@ -250,6 +251,7 @@ to the user with a @visible @not_visible annotation</span>
         </div>
 </div>
 <script src="https://pagecdn.io/lib/ace/1.4.5/ace.js" integrity="sha256-5Xkhn3k/1rbXB+Q/DX/2RuAtaB4dRRyQvMs83prFjpM=" crossorigin="anonymous"></script>    
+{% compress js inline %}
 <script>
     function textarea_edit(name) {
         var editor = ace.edit(name);
@@ -289,4 +291,5 @@ to the user with a @visible @not_visible annotation</span>
     switch_code("1", "solution");
 </script>
 <script src="{% static 'main/js/create.js' %}"></script>
+{% endcompress %}
 {% endblock %}
