--- a/frontend_templates/interview_q_instance/answer.html
+++ b/frontend_templates/interview_q_instance/answer.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load compress %}
 {% load markdown_extras %}
 {% block css_imports %}
 <link href="{% static 'main/css/answer.css' %}" rel="stylesheet" type="text/css">
@@ -125,10 +126,9 @@
     <ul id="test_case_results" class="user_test_case_results"></ul>
   </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="https://pagecdn.io/lib/ace/1.4.5/ace.js" integrity="sha256-5Xkhn3k/1rbXB+Q/DX/2RuAtaB4dRRyQvMs83prFjpM="
   crossorigin="anonymous"></script>
+{% compress js inline %}
 <script type='text/javascript'>
     // themes for the drop down
     var themeData = [
@@ -602,6 +602,7 @@
 
 
 </script>
+{% endcompress %}
 </body>
 
 </html>
