--- a/frontend_templates/info/about.html
+++ b/frontend_templates/info/about.html
@@ -42,7 +42,7 @@
         <div class="row">
           <div class="col-md-12">
             <h2 class="section-header">Contact Us</h2>
-            <p class="contact-body">You can email us at <a href = "mailto: contact-encompass@gmail.com">contact-encompass@gmail.com</a>
+            <p class="contact-body">You can email us at <a href = "mailto: support@encompassinterviews.com">support@encompassinterviews.com</a>
             </p>
           </div>
         </div>
