--- a/frontend_templates/registration/acc_active_email.html
+++ b/frontend_templates/registration/acc_active_email.html
@@ -1,5 +1,11 @@
+Hi {{ user.username }}, 
+
+
+Please click on the link to confirm your registration:
 {% autoescape off %}
-Hi {{ user.username }},
-Please click on the link to confirm your registration,
 http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
 {% endautoescape %}
+Best, 
+
+
+The Encompass Team
