--- a/frontend_templates/interview_q/question.html
+++ b/frontend_templates/interview_q/question.html
@@ -269,6 +269,7 @@ to the user with a @visible @not_visible annotation</span>
 function switch_code(number,name){$("#"+name+"_file_"+number).hide();$("#"+name+"_switch_"+number).change(function(){if(this.checked){$("#"+name+"_body_name_"+number).hide();$("#"+name+"_body_"+number).hide();$("#"+name+"_file_"+number).show()}else{$("#"+name+"_body_"+number).show();$("#"+name+"_body_name_"+number).show();$("#"+name+"_file_"+number).hide()}})}
 function populate_array(array,string_name){for(var i=1;i<array.length+1;i++){textarea_edit(string_name+"_body_"+i.toString());switch_code(i.toString(),string_name)}}
 var code_names={{supporting_code_names|safe}};populate_array(code_names,"supporting");code_names={{starter_code_names|safe}};populate_array(code_names,"starter");code_names={{example_code_names|safe}};populate_array(code_names,"example");code_names={{solution_code_names|safe}};populate_array(code_names,"solution");textarea_edit("test_body_1");switch_code("1","test");
+$(document).on("keydown", ":input:not(textarea)", function(event) {return event.key != "Enter";});
     </script>
         
     {% compress js %}
