starter now have prepended support

--- a/frontend_templates/interview_q/question.html
+++ b/frontend_templates/interview_q/question.html
@@ -151,7 +151,11 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <p class="step-description">In this step, you provide some starter code that the user can optionally fill out.
+                            <p class="step-description">In this step, you will detail the files that the user has to submit. For every file that has to be submitted, 
+                                    a starter code file should be declared. You can just type the name of the file in the name of file field. You can optionally fill in some parts of the file 
+                                    to get the user started. We automatically import 
+                                    all of the supporting code files for each starter file. For example, if one of your support files was called, support.py, then import support would be automatically
+                                    added to each starter file. Telling the user what files and methods they have access to should be done in the API section.
                             </p>
                         </div>
                     </div>
