--- a/frontend_templates/interview_q/create.html
+++ b/frontend_templates/interview_q/create.html
@@ -212,11 +212,11 @@ to the user with a @visible @not_visible annotation</span>
 <span style="color: #008000"># all test cases should be written in this class</span>
 <span style="color: #0000ff">class</span> <span style="color: #2b91af">TestCases</span>(unittest.TestCase):
     @visible
-    <span style="color: #0000ff">def</span> test_user_submitted_file():
+    <span style="color: #0000ff">def</span> test_user_submitted_file(self):
         <span style="color: #0000ff">assert</span> user_submitted_file.custom_function() == 5
 
     @not_visible
-    <span style="color: #0000ff">def</span> test_user_submitted_file_two():
+    <span style="color: #0000ff">def</span> test_user_submitted_file_two(self):
         <span style="color: #0000ff">assert</span> user_submitted_file.custom_function() != 5
 </pre></div>
                         </p>
